--- a/MeetingRoomManagement/src/app/app.component.html
+++ b/MeetingRoomManagement/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar fxLayout="row" fxLayoutAlign="space-between center">
     <span>Booking System</span>
-    <button mat-raised-button (click)="addEvent()" color="primary">Book an event</button>
+    <button mat-raised-button (click)="addEvent()" color="primary">Book an Event</button>
 </mat-toolbar>
 <br>
 <br>
